drafted a blog posts feature

--- a/src/global_styles/variables.css
+++ b/src/global_styles/variables.css
@@ -6,9 +6,19 @@
   font-display: swap;
 }
 
+@font-face {
+  font-family: "Open Sans Bold";
+  src: url("/fonts/open-sans/OpenSans-Bold.ttf");
+  font-weight: normal;
+  font-size: normal;
+  font-display: swap;
+}
+
 :root {
-  --canva-sans: "Open Sans", sans-serif;
+  --open-sans: "Open Sans", sans-serif;
+  --open-sans-bold: "Open Sans Bold", sans-serif;
   --deep-blue: #3e5f9d;
   --light-blue: #6c87b2;
+  --dark-grey: #5a5a5a;
   --background-paper: #f0ebdf;
 }
