--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -1,5 +1,8 @@
 ---
-import MainLayout from "../layouts/MainLayout.astro"
+import HomeMainContainer from "../components/HomeMainContainer";
+import MainLayout from "../layouts/MainLayout.astro";
 ---
+
 <MainLayout>
+    <HomeMainContainer />
 </MainLayout>
