--- a/src/layouts/NavBar.module.css
+++ b/src/layouts/NavBar.module.css
@@ -1,30 +1,43 @@
 .container {
   width: 100%;
-  height: 120px;
+  height: 80px;
   background-color: var(--deep-blue);
   display: flex;
   justify-content: flex-end;
   align-items: flex-end;
 }
+.homeContainer {
+  composes: container;
+  height: 120px;
+}
 
 .box {
   width: 300px;
-  height: 300px;
+  height: 60px;
   position: absolute;
   border: 10px solid var(--deep-blue);
-  background-color: var(--background-paper);
-  color: var(--deep-blue);
+  background-color: white;
   display: flex;
   justify-content: center;
   align-items: center;
 }
+.homeBox {
+  composes: box;
+  height: 300px;
+}
 
 .boxText {
-  font-size: 48px;
-  font-weight: 600;
-  transform: rotate(-20deg);
+  font-family: var(--open-sans-bold);
+  color: var(--dark-grey);
+  font-size: 30px;
+  transform: rotate(0deg);
   text-transform: uppercase;
   text-align: center;
+}
+.homeBoxText {
+  composes: boxText;
+  font-size: 48px;
+  transform: rotate(-20deg);
 }
 
 .linksDiv {
@@ -35,10 +48,10 @@
   color: var(--background-paper);
   font-size: 30px;
   text-transform: uppercase;
+  text-decoration: none;
   padding: 0 20px 0 20px;
   cursor: pointer;
 }
-
 .link:hover {
   color: var(--deep-blue);
   background-color: var(--background-paper);
