finishes tech blogs features

--- a/src/components/BreadCrumbs.module.css
+++ b/src/components/BreadCrumbs.module.css
@@ -1,7 +1,12 @@
-.text {
+.container {
   margin-top: 10px;
   color: var(--deep-blue);
   font-size: 30px;
+  display: flex;
+  gap: 8px;
+}
+
+.parentText {
   text-transform: capitalize;
 }
 
