--- a/src/pages/tech_posts.astro
+++ b/src/pages/tech_posts.astro
@@ -1,9 +1,11 @@
 ---
 import MainLayout from "../layouts/MainLayout.astro";
 import BlogPosts from "../components/BlogPosts";
-const path = Astro.url;
+import { getCollection } from "astro:content";
+const url = Astro.url;
+const allTechPosts = await getCollection("techPosts");
 ---
 
 <MainLayout>
-    <BlogPosts path={path} />
+    <BlogPosts url={url} techPosts={allTechPosts} />
 </MainLayout>
