--- a/src/layouts/MainLayout.astro
+++ b/src/layouts/MainLayout.astro
@@ -2,7 +2,7 @@
 import Footer from "./Footer";
 import NavBar from "./NavBar";
 import "../global_styles/variables.css";
-const path = Astro.url;
+const url = Astro.url;
 ---
 
 <html lang="en">
@@ -15,8 +15,8 @@ const path = Astro.url;
 		<title>Astro</title>
 	</head>
 	<body class="root">
-		<div class="main-container">
-			<NavBar path={path} />
+		<div class="page-body">
+			<NavBar {url} />
 			<main>
 				<slot />
 			</main>
@@ -30,9 +30,11 @@ const path = Astro.url;
 			margin: 0;
 			background-color: var(--background-paper);
 		}
-		.main-container {
-			width: clamp(768px, 100%, 1400px);
-			height: 100%;
+		.page-body {
+			width: clamp(768px, 100%, 1280px);
+			height: 100vh;
+			display: flex;
+			flex-direction: column;
 			margin: auto;
 		}
 	</style>
