--- a/src/layouts/Footer.module.css
+++ b/src/layouts/Footer.module.css
@@ -1,6 +1,6 @@
 .container {
   width: 100%;
-  height: 320px;
+  height: 100%;
   background-color: var(--deep-blue);
   display: flex;
   justify-content: center;
