--- a/src/layouts/NavBar.module.css
+++ b/src/layouts/NavBar.module.css
@@ -1,3 +1,12 @@
+.whole:hover .box {
+  height: 60px;
+}
+
+.whole:hover .homeBoxText {
+  transform: rotate(0deg);
+  font-size: 30px;
+}
+
 .container {
   width: 100%;
   height: 80px;
@@ -6,24 +15,29 @@
   justify-content: flex-end;
   align-items: flex-end;
 }
+
 .homeContainer {
   composes: container;
   height: 120px;
 }
 
 .box {
+  font-family: var(--autumn-monday);
   width: 300px;
   height: 60px;
   position: absolute;
   border: 10px solid var(--deep-blue);
   background-color: white;
+  transition: height 0.2s ease-in-out;
   display: flex;
-  justify-content: center;
   align-items: center;
+  justify-content: center;
+  overflow: hidden;
 }
+
 .homeBox {
-  composes: box;
-  height: 300px;
+  height: 120px;
+  pointer-events: none;
 }
 
 .boxText {
@@ -34,10 +48,11 @@
   text-transform: uppercase;
   text-align: center;
 }
+
 .homeBoxText {
-  composes: boxText;
-  font-size: 48px;
-  transform: rotate(-20deg);
+  font-size: 40px;
+  transform: rotate(-10deg);
+  transition: all 0.5s ease-in-out;
 }
 
 .linksDiv {
