--- a/src/global_styles/variables.css
+++ b/src/global_styles/variables.css
@@ -1,5 +1,13 @@
 @font-face {
   font-family: "Open Sans";
+  src: url("/fonts/open-sans/OpenSans-Regular.ttf");
+  font-weight: normal;
+  font-size: normal;
+  font-display: swap;
+}
+
+@font-face {
+  font-family: "Open Sans Light";
   src: url("/fonts/open-sans/OpenSans-Light.ttf");
   font-weight: normal;
   font-size: normal;
@@ -22,8 +30,18 @@
   font-display: swap;
 }
 
+@font-face {
+  font-family: "VT323";
+  src: url("/fonts/vt323/VT323-Regular.ttf");
+  font-weight: normal;
+  font-size: normal;
+  font-display: swap;
+}
+
 :root {
   --open-sans: "Open Sans", sans-serif;
+  --open-sans-light: "Open Sans Light", sans-serif;
+  --vt323: "VT323", sans-serif;
   --open-sans-bold: "Open Sans Bold", sans-serif;
   --open-sans-semibold-italic: "Open Sans Semi-Bold Italic", cursive;
 
