--- a/src/layouts/Footer.module.css
+++ b/src/layouts/Footer.module.css
@@ -7,3 +7,9 @@
   align-items: center;
   color: var(--background-paper);
 }
+
+@media (width <= 768px) {
+  .container {
+    display: none;
+  }
+}
