--- a/src/layouts/NavBar.module.css
+++ b/src/layouts/NavBar.module.css
@@ -22,7 +22,6 @@
 }
 
 .box {
-  font-family: var(--autumn-monday);
   width: 300px;
   height: 60px;
   position: absolute;
@@ -57,6 +56,7 @@
 
 .linksDiv {
   margin: 5px;
+  font-family: var(--open-sans-light);
 }
 
 .link {
@@ -70,4 +70,30 @@
 .link:hover {
   color: var(--deep-blue);
   background-color: var(--background-paper);
+}
+
+@media (width <= 768px) {
+  .boxText {
+    font-size: 20px;
+  }
+
+  .box {
+    width: 200px;
+  }
+
+  .homeBoxText {
+    font-size: 20px;
+  }
+
+  .link {
+    font-size: 20px;
+  }
+
+  .link > span {
+    display: none;
+  }
+
+  .container {
+    align-items: center;
+  }
 }
