--- a/src/pages/life_posts/[post].astro
+++ b/src/pages/life_posts/[post].astro
@@ -1,6 +1,7 @@
 ---
 import MainLayout from "../../layouts/MainLayout.astro";
 import BreadCrumbs from "../../components/BreadCrumbs";
+import PostLayout from "../../layouts/PostLayout.astro";
 import { getCollection, render } from "astro:content";
 export async function getStaticPaths() {
     const allTechPosts = await getCollection("lifePosts");
@@ -15,32 +16,9 @@ const { Content } = await render(p);
 const url = Astro.url;
 ---
 
-<MainLayout>
-    <div class="post-container">
+<MainLayout showFooter={false}>
+    <PostLayout>
         <BreadCrumbs url={url} path={p.data.slug} title={p.data.title} />
         <Content />
-    </div>
+    </PostLayout>
 </MainLayout>
-
-<style>
-    .post-container {
-        height: var(--main-slot-height);
-        overflow-y: scroll;
-    }
-    .post-container :global(h1) {
-        font-family: var(--open-sans-bold);
-        font-size: 40px;
-        color: var(--deep-blue);
-        text-align: center;
-    }
-
-    .post-container :global(h2) {
-        font-family: var(--open-sans-bold);
-        font-size: 27px;
-        color: var(--light-blue);
-    }
-
-    .post-container :global(p) {
-        font-size: 23px;
-    }
-</style>
