--- a/src/components/BlogPosts.module.css
+++ b/src/components/BlogPosts.module.css
@@ -6,12 +6,28 @@
   display: flex;
   align-items: center;
   font-size: 30px;
+  padding: 15px 0 15px 0;
+}
+
+.titleDiv {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+}
+
+.thumbnail {
+  border: 1px var(--light-blue) solid;
+  height: 60px;
+  width: 400px;
 }
 
 .dateEntry {
   display: flex;
+  align-items: center;
   flex: 1;
   gap: 40px;
+  width: 100px;
+  height: 100px;
 }
 
 .year {
@@ -19,14 +35,15 @@
 }
 
 .date {
+  flex: 1;
   display: flex;
-  width: 100px;
-  justify-content: space-between;
+  gap: 10px;
 }
 
 .month {
   color: var(--light-blue);
 }
+
 .day {
   color: var(--light-blue);
 }
@@ -58,11 +75,15 @@
 
   .date {
     font-size: 15px;
-    justify-content: space-around;
   }
 
   .dateEntry {
-    font-size: 15px;
-    gap: 0px;
+    font-size: 20px;
+  }
+}
+
+@media (768px < width <= 1200px) {
+  .entry {
+    font-size: 20px;
   }
 }
