--- a/src/components/BreadCrumbs.module.css
+++ b/src/components/BreadCrumbs.module.css
@@ -31,3 +31,9 @@
   text-decoration: underline;
   text-decoration-thickness: 2px;
 }
+
+@media (width <= 768px) {
+  .container {
+    font-size: 20px;
+  }
+}
