--- a/src/layouts/MainLayout.astro
+++ b/src/layouts/MainLayout.astro
@@ -1,8 +1,9 @@
 ---
 import Footer from "./Footer";
+import PostFooter from "./PostFooter";
 import NavBar from "./NavBar";
 import "../global_styles/variables.css";
-const { showFooter = true } = Astro.props;
+const { showRegularFooter = true } = Astro.props;
 const url = Astro.url;
 ---
 
@@ -21,7 +22,7 @@ const url = Astro.url;
 			<main>
 				<slot />
 			</main>
-			{showFooter && <Footer />}
+			{showRegularFooter && <Footer />}
 		</div>
 	</body>
 	<style>
@@ -32,7 +33,7 @@ const url = Astro.url;
 			background-color: var(--background-paper);
 		}
 		.page-body {
-			width: clamp(768px, 100%, 1280px);
+			width: clamp(768px, 80%, 1200px);
 			height: 100vh;
 			display: flex;
 			flex-direction: column;
