--- a/src/pages/life_posts/[post].astro
+++ b/src/pages/life_posts/[post].astro
@@ -2,6 +2,7 @@
 import MainLayout from "../../layouts/MainLayout.astro";
 import BreadCrumbs from "../../components/BreadCrumbs";
 import PostLayout from "../../layouts/PostLayout.astro";
+import PostFooter from "../../layouts/PostFooter";
 import { getCollection, render } from "astro:content";
 export async function getStaticPaths() {
     const allTechPosts = await getCollection("lifePosts");
@@ -16,9 +17,10 @@ const { Content } = await render(p);
 const url = Astro.url;
 ---
 
-<MainLayout showFooter={false}>
+<MainLayout showRegularFooter={false}>
     <PostLayout>
         <BreadCrumbs url={url} path={p.data.slug} title={p.data.title} />
         <Content />
+        <PostFooter author={p.data.author} date={p.data.date} />
     </PostLayout>
 </MainLayout>
