--- a/src/layouts/PostLayout.astro
+++ b/src/layouts/PostLayout.astro
@@ -27,6 +27,15 @@
 		font-size: 23px;
 	}
 
+	.post-container :global(p > code) {
+		background-color: var(--grey-paper);
+	}
+
+	.post-container :global(a) {
+		color: var(--light-blue);
+		text-decoration: none;
+	}
+
 	.post-container :global(img) {
 		display: block;
 		margin: auto;
