* adds type for customized entries * refines articles

--- a/src/layouts/PostLayout.astro
+++ b/src/layouts/PostLayout.astro
@@ -23,12 +23,17 @@
 		color: var(--light-blue);
 	}
 
+	.post-container :global(b) {
+		color: var(--light-blue);
+	}
+
 	.post-container :global(p) {
-		font-size: 23px;
+		font-size: 21px;
 	}
 
 	.post-container :global(p > code) {
-		background-color: var(--grey-paper);
+		color: var(--deep-blue);
+		background-color: var(--blueish-paper);
 	}
 
 	.post-container :global(a) {
