--- a/src/pages/about_me.astro
+++ b/src/pages/about_me.astro
@@ -19,6 +19,14 @@ const url = Astro.url;
 <MainLayout showRegularFooter={false}>
     <PostLayout>
         <BreadCrumbs url={url} />
-        <Content />
+        <div class="about-me">
+            <Content />
+        </div>
     </PostLayout>
 </MainLayout>
+
+<style>
+    .about-me {
+        padding-bottom: 200px;
+    }
+</style>
