--- a/src/global_styles/variables.css
+++ b/src/global_styles/variables.css
@@ -48,7 +48,7 @@
   --deep-blue: #3e5f9d;
   --light-blue: #6c87b2;
   --dark-grey: #5a5a5a;
-  --grey-paper: #d1ccbf;
+  --blueish-paper: #e9ebf0;
   --background-paper: #f0ebdf;
 
   --main-slot-height: 760px;
@@ -59,8 +59,8 @@
     }
 
     .astro-code {
-      background-color: var(--background-paper) !important;
-      border-left: 2px var(--light-blue) dashed;
+      background-color: var(--blueish-paper) !important;
+      border-left: 2px var(--light-blue) solid;
       padding-left: 100px;
       display: flex;
     }
