--- a/src/layouts/PostFooter.module.css
+++ b/src/layouts/PostFooter.module.css
@@ -1,5 +1,5 @@
 .container {
-  padding: 20px;
+  padding: 20px 0 0 0;
   margin-top: 20px;
   border-top: 4px var(--deep-blue) dashed;
   flex-shrink: 0;
