--- a/src/layouts/PostLayout.astro
+++ b/src/layouts/PostLayout.astro
@@ -12,14 +12,14 @@
 	}
 	.post-container :global(h1) {
 		font-family: var(--open-sans-bold);
-		font-size: 40px;
+		font-size: 4rem;
 		color: var(--deep-blue);
 		text-align: center;
 	}
 
 	.post-container :global(h2) {
 		font-family: var(--open-sans-bold);
-		font-size: 27px;
+		font-size: 2.7rem;
 		color: var(--light-blue);
 	}
 
@@ -28,12 +28,13 @@
 	}
 
 	.post-container :global(p) {
-		font-size: 21px;
+		color: var(--text-grey);
+		font-size: 2.1rem;
 	}
 
 	.post-container :global(p > code) {
-		color: var(--deep-blue);
-		background-color: var(--blueish-paper);
+		padding: 1px 2px 1px 2px;
+		background-color: var(--greyish-paper);
 	}
 
 	.post-container :global(a) {
