--- a/src/components/BreadCrumbs.module.css
+++ b/src/components/BreadCrumbs.module.css
@@ -5,7 +5,7 @@
   padding-bottom: 20px;
   color: var(--deep-blue);
   background-color: var(--background-paper);
-  font-size: 30px;
+  font-size: 3rem;
   display: flex;
   gap: 8px;
 }
@@ -36,6 +36,6 @@
 
 @media (width <= 768px) {
   .container {
-    font-size: 20px;
+    font-size: 2rem;
   }
 }
