--- a/src/components/HomeMainContainer.module.css
+++ b/src/components/HomeMainContainer.module.css
@@ -71,7 +71,7 @@
 .terminal {
   font-family: var(--vt323);
   color: var(--background-paper);
-  font-size: 30px;
+  font-size: 3rem;
   height: 75%;
   width: 85%;
   display: flex;
@@ -86,7 +86,7 @@
   display: flex;
   align-items: center;
   gap: 5px;
-  font-size: 35px;
+  font-size: 3.5rem;
 }
 
 .output {
