--- a/src/layouts/PostFooter.module.css
+++ b/src/layouts/PostFooter.module.css
@@ -9,7 +9,7 @@
   width: 100%;
   display: flex;
   justify-content: space-between;
-  font-size: 20px;
+  font-size: 2rem;
   color: var(--dark-grey);
   height: 180px;
 }
